--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
-
-REACT_APP_API_SERVICE_HOST = https://api.sariska.io/
-REACT_APP_API_SERVICE_HOST_NAME = meet.sariska.io
-REACT_APP_LOGO=https://assets.sariska.io/Logo_Sariska.svg
-REACT_APP_TITLE=Sariska Meet App
-REACT_APP_ENV = production
+REACT_APP_API_KEY = 27fd6f9d94cb065e3f22d6f426ebb4cf75d658b58faa3f9929
+REACT_APP_DROPBOX_APP_KEY = hey9dkz8x8s3x74
+REACT_APP_API_SERVICE_HOST = https://api.dev.sariska.io/
+REACT_APP_API_SERVICE_HOST_NAME = meet.dev.sariska.io
+REACT_APP_LOGO = https://assets.sariska.io/Logo_Sariska.svg
+REACT_APP_TITLE = Sariska Dev Meet App
+REACT_APP_ENV = development
