--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "demo-kit",
+  "name": "sariska-meet-one-to-one-demo",
   "version": "0.1.0",
+  "homepage": "https://gurudeep88.github.io/one-to-one-meet",
   "private": "true",
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -9,24 +10,16 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@microsoft/microsoft-graph-client": "^3.0.0",
     "@mui/material": "^5.4.1",
-    "@sentry/react": "^6.17.9",
-    "@sentry/tracing": "^6.17.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "base64-js": "^1.5.1",
     "classnames": "^2.3.1",
-    "compressorjs": "^1.1.1",
     "dropbox": "^10.7.0",
     "env-cmd": "^10.1.0",
-    "linkify-html": "^3.0.5",
-    "linkifyjs": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-ga4": "^1.4.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -35,19 +28,18 @@
     "redux-thunk": "^2.3.0",
     "sariska-media-transport": "1.0.8",
     "source-map-explorer": "^2.5.2",
-    "web-vitals": "^1.0.1",
-    "windows-iana": "^5.0.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "env-cmd -f .env.development react-scripts --openssl-legacy-provider start",
+    "start": "env-cmd -f .env.production react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "build:development": "env-cmd -f .env.development npm run build",
     "build:production": "env-cmd -f .env.production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy:development": "aws s3 cp build s3://meet.dev.sariska.io --recursive --acl public-read && aws cloudfront create-invalidation --distribution-id EITMHLTHLYEHH --paths / /bundle.js /index.html",
-    "deploy:production": "aws s3 cp build s3://meet.sariska.io --recursive --acl public-read && aws cloudfront create-invalidation --distribution-id EG507YR0NNTZF --paths / /bundle.js /index.html"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -66,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
